[gd_scene load_steps=9 format=3 uid="uid://xbidybme3tde"]

[ext_resource type="Script" path="res://Scripts/Enemies/spiny.gd" id="1_d667u"]
[ext_resource type="Texture2D" uid="uid://blms2khcx3knr" path="res://Graphics/Enemies/Spiny_Floor.png" id="2_thbk4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(28, 16)

[sub_resource type="Animation" id="Animation_6hjn8"]
resource_name = "RESET"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6f12e"]
resource_name = "SHOOT"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_7j47y"]
resource_name = "WALK"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ab4dn"]
_data = {
"RESET": SubResource("Animation_6hjn8"),
"SHOOT": SubResource("Animation_6f12e"),
"WALK": SubResource("Animation_7j47y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlu3j"]
size = Vector2(128, 64)

[node name="Spiny" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16384
collision_mask = 0
script = ExtResource("1_d667u")

[node name="CollissionMask" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("1")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 528384

[node name="HitBox" type="CollisionShape2D" parent="DamageArea"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_thbk4")
vframes = 3

[node name="BulletPoint" type="Node2D" parent="Sprite2D"]
position = Vector2(0, -3)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
position = Vector2(5.72205e-06, 5.96046e-08)
scale = Vector2(4.26667, 6.4)
rect = Rect2(-15, -10, 30, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ab4dn")
}
autoplay = "RESET"

[node name="PlayerCheck" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_rlu3j")

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_body_exited"]
[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_player_check_body_exited"]
